finished with video

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <div class="col-4 mt-4">
         <div class="card h-100">
             <div class="card-header">
-                <h3>Test</h3>
+                <h3>The Avengers</h3>
                 <h4>Manager</h4>
             </div>
 
             <div class="card-body">
-                <p class="id">ID: 234</p>
-                <p class="email">Email: <a href="mailto:test@test.com">test@test.com</a></p>
-                <p class="office">Office Number: 123123</p>
+                <p class="id">ID: 12345</p>
+                <p class="email">Email: <a href="mailto:TonyStark@aol.com">TonyStark@aol.com</a></p>
+                <p class="office">Office Number: 3456</p>
             </div>
 
         </div>
@@ -41,14 +41,14 @@
     <div class="col-4 mt-4">
         <div class="card h-100">
             <div class="card-header">
-                <h3>Popeye</h3>
+                <h3>Incredible Hulk</h3>
                 <h4>Engineer</h4>
             </div>
 
             <div class="card-body">
-                <p class="id">ID: 123</p>
-                <p class="email">Email: <a href="mailto:popeye@gmail.com">popeye@gmail.com</a></p>
-                <p class="github">Github: <a href="https://github.com/Popeye">Popeye</a></p>
+                <p class="id">ID: 34556</p>
+                <p class="email">Email: <a href="mailto:hulkbuster@yahoo.com">hulkbuster@yahoo.com</a></p>
+                <p class="github">Github: <a href="https://github.com/GreenMonster">GreenMonster</a></p>
             </div>
 
         </div>
@@ -57,17 +57,33 @@
     <div class="col-4 mt-4">
         <div class="card h-100">
             <div class="card-header">
-                <h3>Olive</h3>
+                <h3>Black Widow</h3>
                 <h4>Intern</h4>
             </div>
 
             <div class="card-body">
-                <p class="id">ID: 12553</p>
-                <p class="email">Email:<a href="mailto:olive@aol.com">olive@aol.com</a></p>
-                <p class="school">School: USOP</p>
+                <p class="id">ID: 123432</p>
+                <p class="email">Email:<a href="mailto:blackwidow@hotmail.com">blackwidow@hotmail.com</a></p>
+                <p class="school">School: School of Spies</p>
             </div>
     </div>
 </div>
+    
+    <div class="col-4 mt-4">
+        <div class="card h-100">
+            <div class="card-header">
+                <h3>Captain America</h3>
+                <h4>Engineer</h4>
+            </div>
+
+            <div class="card-body">
+                <p class="id">ID: 5454</p>
+                <p class="email">Email: <a href="mailto:CptA@gmail.com">CptA@gmail.com</a></p>
+                <p class="github">Github: <a href="https://github.com/TheGoodGuy">TheGoodGuy</a></p>
+            </div>
+
+        </div>
+    </div>
     
               </div>
           </div>
